--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <body>
     <div class="header--container">
       <img src="/assets/cat.png" alt="img of a cat in a shopping cart" />
-      <input type="text" id="input-field" placeholder="Bread" />
-      <button id="add-button">Add to cart</button>
+      <input type="text" id="input-field" placeholder="Bananas" />
+      <button id="add-button">Add to Cat</button>
       <ul id="shopping-list"></ul>
+      <div class="divider"></div>
+      <ul id="old-items-list"></ul>
     </div>
     <script src="index.js" type="module"></script>
   </body>
