delete item popup
added a popup when deleting an item

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="header--container">
+    <main>
       <img src="/assets/cat.png" alt="img of a cat in a shopping cart" />
       <input type="text" id="input-field" placeholder="Bananas" />
       <button id="add-button">Add to Cat</button>
       <ul id="shopping-list"></ul>
       <div class="divider"></div>
       <ul id="old-items-list"></ul>
-    </div>
+    </main>
+    <div class="popup" id="popup"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
