--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="divider"></div>
       <ul id="old-items-list"></ul>
     </main>
-    <div class="popup" id="popup"></div>
+    <div class="popup hidden" id="popup"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
