added draging and bin
it3ems can be dragged now and remove via the recycling bin, refactured code to make a new element

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="divider"></div>
       <ul id="old-items-list"></ul>
     </main>
+    <div class="recycle-bin" id="recycle-bin">
+      <img src="./assets/trashbin-nobg.gif" alt="" />
+    </div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
